src/parser/grammar/test_samples/constructors/invalid/constructor_wrong_name.5th
// INVALID: Constructor name doesn't match class name
class Person {
    Name: string;
    
    PersonConstructor(name: string) {
        this.Name = name;
    }
}

main(): int {
    return 0;
}
